--- a/messages.css
+++ b/messages.css
@@ -18,11 +18,20 @@
 }
 
 .message.bot {
+    display: flex;
+    align-items: center;
     align-self: flex-start;
     background-color: #333333;
     color: #BCBCBC;
-    tabindex: 0;
 }
+
+.bot-chat-image {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 
 .message.user:hover, .message.bot:hover {
     background-color: #f9f9f9;
